공용 모듈 별도 프로젝트로 분리

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>saga_msa</groupId>
+            <artifactId>common-lib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
