--- a/restaurant-service/build.gradle
+++ b/restaurant-service/build.gradle
@@ -27,6 +27,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // Object Mapping
+    implementation 'org.modelmapper:modelmapper:3.1.1'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
